--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: pollyboot
+name: polyboot
 version: 0.0.1
 author: Željko Kunica <zeljko.kunica@gmail.com>
 description: Bootstrap components made in polymer
